<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/darker_gray"
    android:gravity="center_horizontal"
    tools:context=".FragmentOne"
    android:id="@+id/ll_frag1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is Fragment 1" />

    <Button
        android:id="@+id/btn_launch_frag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Launch fragment 2" />

</LinearLayout>