<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light"
    android:gravity="center_horizontal"
    tools:context=".FragmentTwo"
    android:id="@+id/ll_frag2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This is Fragment 2" />

    <Button
        android:id="@+id/btn_frag2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Move back to fragment 1" />

</LinearLayout>